 - kotlin-stdlib: v1.6.21 -> v2.0.20
 - kotlinx-coroutines: v1.6.4 (custom build) -> v1.9.0
 - jetbrains-annotations: v23.0.0 -> REMOVED (now included in kotlin-stdlib)
Changes to jar file locations:
 - Moved LazyLib-Console.jar and Kotlin-Runtime.jar to jars/internal, to
   better signify that they aren't meant to be added as dependencies
Changes to CollisionUtils:
 - Fixed getCollisionPoint(Vector2f lineStart, Vector2f lineEnd,
   CombatEntityAPI target) returning null if entire line was within target's
   bounds without touching a bounds segment (now returns copy of lineStart)
 - getNearestPointOnBounds() no longer requires you to call bounds.update();
   as with all other CollisionUtils methods it now calls update() itself
Changes to ColorUtils:
 - Added genRandomColor(), returns a Color with random RGB values
Changes to FastTrig:
 - atan() properly reduces its argument if it's not between -1 and 1
   (credit to Genir for the bug report and the fix)
Changes to LazyFont:
 - Fixed display of fonts whose texture scaling doesn't match their texture size
   (credit to Psiyon for the bug report and the fix)
 - Added buildUntilLimit(String line, float fontSize, float maxWidth), which
   returns a substring of line that will fit within maxWidth width
 - Unicode smart quotes (single and double) are converted into basic quotes
 - Attempting to create a DrawableString with missing character data will only
   log a warning once per missing character, instead of every time one is used
   (explanation: if the font doesn't define Ç, it will log a warning the first
    time you try to draw one while replacing the missing character with either
    a question mark, or empty space if the font doesn't define a question mark)
 - LazyFont.loadFont() will now make up fake data for a space character if the
   font file lacks one (it creates an invisible pixel with extra padding)
 - Cached fallback char used when font doesn't contain a requested character;