@@ -1,0 +1,4 @@
+public class ShapeUtilsTests
+{
+    private static final int NUM_TESTS = 100_000;
+}
